step-item : fix overflow

--- a/src/blocks/_pro/step-item/style.scss
+++ b/src/blocks/_pro/step-item/style.scss
@@ -21,7 +21,35 @@
 			margin-top: 0;
 		}
 		&_content {
-			display:grid; // block & hidden だと中の要素のシャドウが切れるので grid に変更
+			/*
+			 まず最後の要素の下にマージンがある場合、そのマージンが高さとして検出されずに vk_step_item_content から下にはみ出る。
+			 vk_step_item_content がマージン分を検出しないと、左側のラインが次のステップとの間に余白ができてしまう。
+
+			 回避対応 A : display:block; overflow:hidden;
+			 中の要素にシャドウをつけた場合、シャドウが hidden で切れてしまう。
+
+			 回避対応 B : display:grid;
+			 grid では直下に div など配置しないと幅の制限が適切に制御できず、
+			 コードブロックなどがはみ出してしまう
+
+			 回避対応 C : display:grid; overflow:hidden;
+			 コードブロックなど、はみ出し部分が非表示にはなるが、
+			 強制的に非表示にしているので見切れている部分に横スライドができなくなる。
+
+			 回避対応 D : display:table;
+			 はみだす
+
+			 @since1.53.1
+			 回避対応 E : clearfix & border:1px solid rgba(0,0,0,0);
+			 border:1px solid rgba(0,0,0,0); がないと高さが検出されないので注意
+			 */
+			&:after {
+				border:1px solid rgba(0,0,0,0);
+				content: "";
+				display: block;
+				clear: both;
+			}
+
 			& > *:last-child{
 				margin-bottom:var(--vk-margin-md);
 			}
